# ceres-numpy-crash

./: CMakeLists.txt  Dockerfile  README.md  ceres_repro.py  pyproject.toml  setup.py
src/cpp/: main.cpp
